# androidhelloworld

./: .gitignore  README.md  build.gradle  local.properties
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hello-world-example.cpp
dali/include/: android_native_dali_app_glue.h
